--- a/src/main/resources/templates/categoria/modifica.html
+++ b/src/main/resources/templates/categoria/modifica.html
@@ -7,13 +7,9 @@
 <body>
     <header th:replace="~{layout/plantilla :: header}"></header>
 
-    <!-- Secciones corregidas -->
-    <section th:replace="~{categoria/fragmentos :: botonesAgregar}"></section>
-    <section th:replace="~{categoria/fragmentos :: agregarCategoria}"></section>
-    <section th:replace="~{categoria/fragmentos :: listadoCategorias}"></section>
+    <section th:replace="~{categoria/fragmentos :: editarCategoria}"></section>
 
     <footer th:replace="~{layout/plantilla :: footer}"></footer>
 </body>
 
 </html>
-
