--- a/src/main/resources/templates/categoria/listado.html
+++ b/src/main/resources/templates/categoria/listado.html
@@ -1,19 +1,16 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-
-<head th:replace="~{layout/plantilla :: head}">
-</head>
-
-<body>
-    <header th:replace="~{layout/plantilla :: header}"></header>
-
-    <!-- Secciones corregidas -->
-    <section th:replace="~{categoria/fragmentos :: botonesAgregar}"></section>
-    <section th:replace="~{categoria/fragmentos :: agregarCategoria}"></section>
-    <section th:replace="~{categoria/fragmentos :: listadoCategorias}"></section>
-
-    <footer th:replace="~{layout/plantilla :: footer}"></footer>
-</body>
-
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns="http://www.w3.org/1999/xhtml">
+    <head th:replace="~{layout/plantilla :: head}">
+        <title>TODO supply a title</title>
+    </head>
+    <body>
+        <header th:replace="~{layout/plantilla :: header}"/>
+        
+        <section th:replace="~{categoria/fragmentos :: botonesAgregar}"/>
+        <section th:replace="~{categoria/fragmentos :: agregarCategoria}"/>
+        <section th:replace="~{categoria/fragmentos :: listadoCategorias}"/>        
+        
+        <footer th:replace="~{layout/plantilla :: footer}"/>
+    </body>
 </html>
-
