--- a/src/main/resources/templates/pruebas/fragmentos.html
+++ b/src/main/resources/templates/pruebas/fragmentos.html
@@ -5,7 +5,7 @@
         <title>TechShop</title>
     </head>
     <body>
-        <!-- 1 Sección principal para mostrar la informaccion de las categorias -->
+        <!-- 1 Sección principal para mostrar la informacion de las categorias -->
         <section th:fragment="categoriasTabs" id="categorias">
             <div class="row py-4">
                 <ul class="nav nav-tabs">
@@ -24,7 +24,7 @@
             </div>
         </section>
 
-        <!-- 2 Sección principal para mostrar la informaccion de las productos -->
+        <!-- 2 Sección principal para mostrar la informacion de las productos -->
         <section th:fragment="listadoProductos" id="productos">
             <div class="container">
                 <div class="row">
@@ -71,34 +71,6 @@
                 </div>
             </div>
         </section>
-
-
-        <h3 th:if="${totalProductos > 0}">
-            Resultados de la consulta (Total: <span th:text="${totalProductos}"></span> productos):
-        </h3>
-        <h3 th:if="${totalProductos == 0}">
-            No se encontraron productos en el rango seleccionado.
-        </h3>
-
-        <table class="table table-striped">
-            <thead>
-                <tr>
-                    <th>#</th>
-                    <th>Descripción</th>
-                    <th>Precio</th>
-                    <th>Existencias</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr th:each="producto, iterStat : ${productos}">
-                    <td th:text="${iterStat.count}">1</td>
-                    <td th:text="${producto.descripcion}">Monitor</td>
-                    <td th:text="${producto.precio}">23000</td>
-                    <td th:text="${producto.existencias}">5</td>
-                </tr>
-            </tbody>
-        </table>
-
 
         <!-- 3 Sección para crear los filtros -->
         <section th:fragment="filtros" class="bg-light">
@@ -181,11 +153,8 @@
                             </div>
                         </div>
                     </form>
-                </div>
-            </div>
-
-            <div class="row">
-    <!-- Consulta Ampliada -->
+                </div>  
+                 <!-- Consulta Ampliada -->
     <div class="col-md-4">
         <form method="POST" th:action="@{/pruebas/query4}" class="was-validated">
             <div class="card">
@@ -253,8 +222,9 @@
             </div>
         </form>
     </div>
-</div>
-
+            </div>
         </section> 
+
+
     </body>
 </html>
