--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,14 +2,11 @@
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns="http://www.w3.org/1999/xhtml">
     <head th:replace="~{layout/plantilla :: head}">
-        <title>TODO supply a title</title>
+        <title>TechShop</title>        
     </head>
     <body>
         <header th:replace="~{layout/plantilla :: header}"/>
-        
-        
-        
-        
-        <footer th:replace="~{layout/plantilla :: footer}"/>
+        <section th:replace="~{carrito/fragmentos :: listadoProductos}"/>
+        <footer th:replace="~{layout/plantilla :: footer}"/>          
     </body>
 </html>
